# FFT-Power-Spectrum

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake_modules/: FindCppUnit.cmake  FindSFML.cmake
include/app/: Controller.h  GUI.h
include/core/: FFT.h
include/utils/: Exception.h  SizedVector.h  TimeIt.h  Utils.h
src/: CMakeLists.txt
src/app/: Controller.cpp  GUI.cpp
src/fft/: FFT.cpp
src/utils/: Timeit.cpp
tests/: CMakeLists.txt  TestCore.cpp  TestCore.h  TestSuite.cpp
